brat/test/golden/kernel/delete.brat.golden
Error in test/golden/kernel/delete.brat@2:13
deleteFst = { q0, q1 => q1 }
            ^^^^^^^^^^^^^^^^

  Type error: Variable(s) q0 haven't been used

