brat/test/golden/kernel/delete.brat
deleteFst :: { Qubit, Qubit -o Qubit }
deleteFst = { q0, q1 => q1 }
